--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,8 @@
 \title{Vedtægter for Fagrådet Sigma\\
 \large{23. maj 2023}}
 
+\author{}
+
 \titleformat{\section}{\normalfont\Large\bfseries}{\S\thesection}{1em}{}
 
 \titleformat{\subsection}[runin]{\normalfont\normalsize\sffamily}{\textsl{Stk. \thesubsection}.}{0.5em}{}
@@ -32,11 +34,11 @@
 
 \subsection{\fagr{} har hjemsted på Ny Munkegade 116 1, 8000 Aarhus C, lokale 1535-129.}
 
-\subsection{Foreningen tegnes af forpersonen of kassereren.}
+\subsection{Foreningen tegnes af forpersonen og kassereren.}
 
 \section{Formål og tilhørsforhold}
 
-\subsection{\fagr{} repræsenterer studerende indskrevende på følgende institutter og centre, herefter betegnet som Faggruppen:}
+\subsection{\fagr{} repræsenterer studerende indskrevet på følgende institutter og centre, herefter betegnet som Faggruppen:}
 
 \begin{enumerate}[a), nosep]
 \item Institut for Matematik,
@@ -46,37 +48,37 @@
 \item Interdisciplinary Nanoscience Center.
 \end{enumerate}
 
-\subsection{\fagr{} har til formål at virke til gavn for de studerende i Faggruppen ved at varetage deres fælles faglige, økonomiske og sociale interesser.}\label{2:2}
+\subsection{\fagr{} har til formål at virke til gavn for de studerende i Faggruppen ved at varetage deres fælles faglige, økonomiske og sociale interesser.}\label{formaal:gavn}
 
-\subsection{\fagr{} udggør Faggruppens repræsentation ved Studenterrådet ved Aarhus Universitet og lader sig derfor repræsentere i Studenterrådets fællesråd.}
+\subsection{\fagr{} udggør faggruppens repræsentation ved Studenterrådet ved Aarhus Universitet og lader sig derfor repræsentere i Studenterrådets fællesråd.}
 
-\subsection{\fagr{} opstiller kandidater til relevante udvalg og nævn, herunder Studienævnet og Akademisk Råd ved Faculty og Natural Sciences.}\label{2:4}
+\subsection{\fagr{} opstiller kandidater til relevante udvalg og nævn, herunder Studienævnet og Akademisk Råd ved Faculty of Natural Sciences.}\label{formaal:opstilling}
 
-\subsection{Kandidater valgt i henhold til stk. \ref{2:4} forpligter sig til at holde \fagr{} orienteret om deres vorke og i desuden bestræbe sig efter at repræsentere de studerendes interesser jf. stk. 2 i samarbejde med \fagr{} og dets holdninger som vedtaget på møder, generalforsamlinger og studentermøder.}
+\subsection{Kandidater valgt i henhold til stk. \ref{formaal:opstilling} forpligter sig til at holde \fagr{} orienteret om deres virke og desuden bestræbe sig efter at repræsentere de studerendes interesser jf. stk. 2 i samarbejde med \fagr{} og dets holdninger som vedtaget på møder, generalforsamlinger og studentermøder.}
 
-\section{Generalforsamling}\label{3}
+\section{Generalforsamling}\label{gf}
 
 \subsection{Generalforsamlingen er \fagr{}s øverste myndighed.}
 
 \subsection{Den ordinære generalforsamling afholdes i fjerde kvartal og indkaldes af forpersonen med senest 28 dages varsel på \fagr{}s opslagstavle foran Matematisk Kantine og på \fagr{}s Facebook-side. Indkaldelse til den ordinære generalforsamling skal indeholde digital henvisning til det reviderede regnskab.}
 
-\subsection{Ekstaordinær generalforsamling kan til enhver tid indkaldes med 14 dages varsel, når do tredjedeles flertal af de indvalgte stiller krav herom. Der indgives skriftlig begæring til forpersonen, som herefter forestår indkaldelse i overensstemmelse med stk. \ref{2:2}.}
+\subsection{Ekstaordinær generalforsamling kan til enhver tid indkaldes med 14 dages varsel, når do tredjedeles flertal af de indvalgte stiller krav herom. Der indgives skriftlig begæring til forpersonen, som herefter forestår indkaldelse i overensstemmelse med stk. \ref{formaal:gavn}.}
 
 \subsection{Generalforsamlingen er beslutningsdygtig, når den er indkaldt rettidigt, og dagsordenen er offentliggjort senest 7 dage før generalforsamlingens afholdelse på \fagr{}s opslagstavle foran Matematisk Kantine og på \fagr{}s Facebook-side.}
 
 \subsection{Generalforsamlingen træffer beslutninger ved simpelt flertal. Dog kræver vedtægtsændringer to tredjedeles flertal. Enhver studerende under Faggruppen har tal- og stemmeret.}
 
-\subsection{Kun studerende under Faggruppen kan opstille til valg i henhold til §\ref{4}, stk. \ref{4:1}, nr. 5, litra a-e. Opstilling kan se fysisk umiddelbart indene valget eller på forhånd ved skriftlig tilkendegivelse til forpersonen.}
+\subsection{Kun studerende under Faggruppen kan opstille til valg i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5, litra a-e. Opstilling kan se fysisk umiddelbart indene valget eller på forhånd ved skriftlig tilkendegivelse til forpersonen.}
 
-\subsection{Valg i henhold til §\ref{4}, stk. \ref{4:1}, nr. 5 afholdes ved simpelt flertal via håndsoprækning. En eller flere stemmeberettigede kan begære skriftlig og hemmelig afstemning.}
+\subsection{Valg i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5 afholdes ved simpelt flertal via håndsoprækning. En eller flere stemmeberettigede kan begære skriftlig og hemmelig afstemning.}
 
-\subsection{En person, der er valgt til én post i henhold til §\ref{4}, stk. \ref{4:1}, nr. 5 kan ikke vælges til andre poster. Valgte i henhold til §\ref{4}, stk. \ref{4:1}, nr., litra a-e, benævnes indvalgte.}
+\subsection{En person, der er valgt til én post i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5 kan ikke vælges til andre poster. Valgte i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr., litra a-e, benævnes indvalgte.}
 
-\subsection{Dirigenten orienterer Studenterrådets Dirigentinstitution om generalforsamlingens valg af posterne beskrevet i §\ref{4}, stk. \ref{4:1}, nr. 5, litra a-c.}
+\subsection{Dirigenten orienterer Studenterrådets Dirigentinstitution om generalforsamlingens valg af posterne beskrevet i §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5, litra a-c.}
 
-\section{Generalforsamlingens indhold}\label{4}
+\section{Generalforsamlingens indhold}\label{gfi}
 
-\subsection{Dagsorden for den ordinære generalforsamling skal indeholde mindst følgende punkter:}\label{4:1}
+\subsection{Dagsorden for den ordinære generalforsamling skal indeholde mindst følgende punkter:}\label{gfi:dagsorden}
 
 \begin{enumerate}[1), nosep]
 \item Formalia
@@ -104,15 +106,15 @@
 \item Eventuelt
 \end{enumerate}
 
-\subsection{På en ekstraordinær generalforsamling behandles altid punkterne i stk. \ref{4:1}, nr. 1, 6 og 8. Øvrige punkter fra stk. \ref{4:1} samt punkterne i øvrigt kan behandles, såfremt disse nævnes i begæringen. Der kan kun behandles indkomne forslag, som er indeholdt i begæringen.}
+\subsection{På en ekstraordinær generalforsamling behandles altid punkterne i stk. \ref{gfi:dagsorden}, nr. 1, 6 og 8. Øvrige punkter fra stk. \ref{gfi} samt punkterne i øvrigt kan behandles, såfremt disse nævnes i begæringen. Der kan kun behandles indkomne forslag, som er indeholdt i begæringen.}
 
-\subsection{Forpersonens beretning, jf. stk. \ref{4:1}, nr. 2, skal som minimum indeholde oversigten over afholdte arrangementer i foreningens regi og andre politiske aktiviteter.}
+\subsection{Forpersonens beretning, jf. stk. \ref{gfi}, nr. 2, skal som minimum indeholde oversigten over afholdte arrangementer i foreningens regi og andre politiske aktiviteter.}
 
-\subsection{Kassererens beretning, jf. stk. \ref{4:1}, nr. 3, skal som minimum indeholde fremlæggelse af det reviderede regnskab til godkende samt revisorernes fremlæggelse af bemærkninger til regnskabet.}
+\subsection{Kassererens beretning, jf. stk. \ref{gfi}, nr. 3, skal som minimum indeholde fremlæggelse af det reviderede regnskab til godkende samt revisorernes fremlæggelse af bemærkninger til regnskabet.}
 
-\subsection{Studenterrådets beretning, jf. stk. \ref{4:1}, nr. 4, skal som minimum indeholde en oversigt over de vigtigste arrangementer i Studenterrådet med relevans for Faggruppen.}
+\subsection{Studenterrådets beretning, jf. stk. \ref{gfi}, nr. 4, skal som minimum indeholde en oversigt over de vigtigste arrangementer i Studenterrådet med relevans for Faggruppen.}
 
-\subsection{Indkomne forslag, jf. stk. \ref{4:1}, nr. 6, kan indsendes af enhver studerende under Faggruppen og skal være forpersonen i hænde senest 14 dage før generalforsamlingens afholdelse.}
+\subsection{Indkomne forslag, jf. stk. \ref{gfi}, nr. 6, kan indsendes af enhver studerende under Faggruppen og skal være forpersonen i hænde senest 14 dage før generalforsamlingens afholdelse.}
 
 \section{Studentermøder}
 
@@ -138,7 +140,7 @@
 
 \subsection{Beslutninger træffes ved simpelt flertal. Der kan ikke træffes beslutninger under punktet Eventuelt eller punkter, som ikke fremgik på dagsordenen ved indkaldelsen.}
 
-\section{Foreningens daglige ledelse}\label{6}
+\section{Foreningens daglige ledelse}\label{dagligledelse}
 
 \subsection{\fagr{}s daglige ledelse udgøres af møderne i \fagr{}.}
 
@@ -159,7 +161,7 @@
 	\item Udvalg under Fagrådet Sigma
 	\item Underforeninger
 	\end{enumerate}
-\item Valg af menigt indvalgte efter proceduren i § \ref{3}, stk. 6-8
+\item Valg af menigt indvalgte efter proceduren i § \ref{gf}, stk. 6-8
 \item Planlægning af næste møde
 \item Eventuelt
 \end{enumerate}
@@ -172,15 +174,15 @@
 
 \subsection{Kassereren fører løbende regnskab og tilsyn med \fagr{}s økonomi og bistår revisorerne med fremskaffelse af kontoudtog og øvrige bilag til regnskabet.}
 
-\subsection{Udlæg, der overstiger 2.000 kr., skal godkendes på et møde i \fagr{}, jf. § \ref{6}.}
+\subsection{Udlæg, der overstiger 2.000 kr., skal godkendes på et møde i \fagr{}, jf. § \ref{dagligledelse}.}
 
 \subsection{Revisorerne skal inden den ordinære generalforsamling gennemgå regnskabet og kontrollere, at det stemmer overens med beholdningerne. Den kritiske revisor påtegner regnskabet.}
 
 \section{Underforeninger}
 
-\subsection{En underforening af \fagr{} er en forening nævnt i stk. \ref{8:2}, som repræsenterer en eller flere uddannelser i Faggruppen, og som i sine vedtægter forpligter sig til bestemmelser i nærværende paragraf. Medlemmer af en underforening er ikke nødvendigvis medlemmer i \fagr{}.}
+\subsection{En underforening af \fagr{} er en forening nævnt i stk. \ref{underforeninger:liste}, som repræsenterer en eller flere uddannelser i Faggruppen, og som i sine vedtægter forpligter sig til bestemmelser i nærværende paragraf. Medlemmer af en underforening er ikke nødvendigvis medlemmer i \fagr{}.}
 
-\subsection{Følgende foreninger er underforeninger af \fagr{}:}\label{8:2}
+\subsection{Følgende foreninger er underforeninger af \fagr{}:}\label{underforeninger:liste}
 
 \begin{enumerate}[a), nosep]
 \item Institut for Fysik \& Astronomi StudenterRepræsentation ("ISR")
@@ -188,7 +190,7 @@
 
 \subsection{Underforeninger sender mødereferater til \fagr{} og underretter regelmæssigt forpersonen i \fagr{} om status i underforeningen.}
 
-\subsection{En underforening kan udmeldes af \fagr{}, hvis det vedtages ved en generalforsamling i underforeningen. For foreninger, der ikke har generalforsamlinger, skal der stemmes for ved et studentermøde og et internt møde i underforeningen. Ved udmeldelse fjernes underforeningen automatisk fra listen i stk. \ref{8:2}.}
+\subsection{En underforening kan udmeldes af \fagr{}, hvis det vedtages ved en generalforsamling i underforeningen. For foreninger, der ikke har generalforsamlinger, skal der stemmes for ved et studentermøde og et internt møde i underforeningen. Ved udmeldelse fjernes underforeningen automatisk fra listen i stk. \ref{underforeninger:liste}.}
 
 \section{Opløsning af foreningen}
 
