--- a/udkast.tex
+++ b/udkast.tex
@@ -33,7 +33,7 @@
 
 \subsection{Foreningens navn er \fagr{}.}\label{navn:navn}
 
-\subsection{\fagr{} har hjemsted på Ny Munkegade 116 1, 8000 Aarhus C, lokale 1535-129, \textbf{i daglig tale kendt som Rådet, ved Aarhus Universitet}.}
+\subsection{\fagr{} har hjemsted på Ny Munkegade 116 1, 8000 Aarhus C, lokale 1535-129, herefter omtalt Rådet, ved Aarhus Universitet.}\label{navn:hjemsted}
 
 \subsection{Foreningen tegnes af forpersonen og kassereren.}
 
@@ -49,9 +49,9 @@
 \item Interdisciplinary Nanoscience Center.
 \end{enumerate}
 
-\subsection{\fagr{} har til formål at virke til gavn for de studerende i Faggruppen ved at varetage deres fælles faglige, økonomiske og sociale interesser.}\label{formaal:gavn}
+\subsection{\fagr{} har til formål at virke til gavn for de studerende i Faggruppen ved at varetage deres fælles faglige og studierelaterede forhold og interesser.}\label{formaal:repr}
 
-\subsection{\fagr{} udggør faggruppens repræsentation ved Studenterrådet ved Aarhus Universitet og lader sig derfor repræsentere i Studenterrådets fællesråd.}\label{formaal:repr}
+\subsection{\fagr{} uddgør Faggruppens repræsentation ved Studenterrådet ved Aarhus Universitet og lader sig derfor repræsentere i Studenterrådets fællesråd.}
 
 \subsection{\fagr{} opstiller kandidater til relevante udvalg og nævn, herunder Studienævnet og Akademisk Råd ved Faculty of Natural Sciences.}\label{formaal:opstilling}
 
@@ -61,19 +61,21 @@
 
 \subsection{Generalforsamlingen er \fagr{}s øverste myndighed.}
 
-\subsection{Den ordinære generalforsamling afholdes i fjerde kvartal og indkaldes af forpersonen med senest 28 dages varsel på \fagr{}s opslagstavle foran Matematisk Kantine og på \fagr{}s Facebook-side. Indkaldelse til den ordinære generalforsamling skal indeholde digital henvisning til det reviderede regnskab.}\label{gf:ordindkaldelse}
+\subsection{Den ordinære generalforsamling afholdes i andet kvartal og indkaldes af bestyrelsen med senest 21 dages varsel på \fagr{}s opslagstavle foran Matematisk Kantine og på \fagr{}s Facebook-side. Indkaldelse til den ordinære generalforsamling skal indeholde digital henvisning til det reviderede regnskab.}\label{gf:ordindkaldelse}
 
-\subsection{Ekstraordinær generalforsamling kan til enhver tid indkaldes med 14 dages varsel, når do tredjedeles flertal af de indvalgte stiller krav herom. Der indgives skriftlig begæring til forpersonen, som herefter forestår indkaldelse i overensstemmelse med stk. \ref{gf:ordindkaldelse}.}\label{gf:ekstraindkaldelse}
+\subsection{Ekstraordinær generalforsamling kan til enhver tid indkaldes med 14 dages varsel, når to tredjedeles flertal af de indvalgte stiller krav herom. Der indgives skriftlig begæring til forpersonen, som herefter forestår indkaldelse i overensstemmelse med stk. \ref{gf:rettidigt}.}\label{gf:ekstraindkaldelse}
 
-\subsection{Generalforsamlingen er beslutningsdygtig, når den er indkaldt rettidigt, og dagsordenen er offentliggjort senest 7 dage før generalforsamlingens afholdelse på \fagr{}s opslagstavle foran Matematisk Kantine og på \fagr{}s Facebook-side.}
+\subsection{Generalforsamlingen er beslutningsdygtig, når den er indkaldt rettidigt, og dagsordenen er offentliggjort senest 7 dage før generalforsamlingens afholdelse på \fagr{}s opslagstavle foran Matematisk Kantine og på \fagr{}s Facebook-side.}\label{gf:rettidigt}
 
-\subsection{Generalforsamlingen træffer beslutninger ved simpelt flertal. Dog kræver vedtægtsændringer to tredjedeles flertal. Enhver studerende under Faggruppen har tal- og stemmeret.}
+\subsection{Generalforsamlingen træffer beslutninger ved simpelt flertal. Dog kræver vedtægtsændringer to tredjedeles flertal. Enhver studerende under Faggruppen har tale- og stemmeret.}
 
-\subsection{Kun studerende under Faggruppen kan opstille til valg i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5, litra a-e. Opstilling kan se fysisk umiddelbart indene valget eller på forhånd ved skriftlig tilkendegivelse til forpersonen.}\label{gf:studerende}
+\subsection{Kun studerende under Faggruppen kan opstille til valg i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5, litra a-e. Opstilling kan ske fysisk umiddelbart inden valget eller på forhånd ved skriftlig tilkendegivelse til forpersonen.}\label{gf:studerende}
 
 \subsection{Valg i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5 afholdes ved simpelt flertal via håndsoprækning. En eller flere stemmeberettigede kan begære skriftlig og hemmelig afstemning.}\label{gf:menigtindvalgte}
 
 \subsection{En person, der er valgt til én post i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5 kan ikke vælges til andre poster. Valgte i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr., litra a-e, benævnes indvalgte.}\label{gf:begrpost}
+
+\subsection{Der skelnes mellem poster valgt i henhold til stk. \ref{gfi:dagsorden}, nr. 5, litra a-c, som udgør bestyrelsen jf. §\ref{bestyrelsen}, og stk. \ref{gfi:dagsorden}, nr. 5, d-e, som udgør menige medlemmer.}
 
 \subsection{Dirigenten orienterer Studenterrådets Dirigentinstitution om generalforsamlingens valg af posterne beskrevet i §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5, litra a-c.}\label{gf:orienterer}
 
@@ -100,22 +102,22 @@
 	\item Kasserer
 	\item Intern revisor
 	\item Menigt indvalgte
-	\item Kritisk revisor
+	\item Ekstern revisor
 	\end{enumerate}
 \item Indkomne forslag
 \item Dato for første møde i \fagr{}
 \item Eventuelt
 \end{enumerate}
 
-\subsection{På en ekstraordinær generalforsamling behandles altid punkterne i stk. \ref{gfi:dagsorden}, nr. 1, 6 og 8. Øvrige punkter fra stk. \ref{gfi} samt punkterne i øvrigt kan behandles, såfremt disse nævnes i begæringen. Der kan kun behandles indkomne forslag, som er indeholdt i begæringen.}\label{gfi:ekstra}
+\subsection{På en ekstraordinær generalforsamling behandles altid punkterne i stk. \ref{gfi:dagsorden}, nr. 1, 6 og 8. Øvrige punkter fra stk. \ref{gfi:dagsorden} samt punkterne i øvrigt kan behandles, såfremt disse nævnes i begæringen. Der kan kun behandles indkomne forslag, som er indeholdt i begæringen.}\label{gfi:ekstra}
 
-\subsection{Forpersonens beretning, jf. stk. \ref{gfi}, nr. 2, skal som minimum indeholde oversigten over afholdte arrangementer i foreningens regi og andre politiske aktiviteter.}
+\subsection{Forpersonens beretning, jf. stk. \ref{gfi:dagsorden}, nr. 2, skal som minimum indeholde oversigten over afholdte arrangementer i foreningens regi og andre politiske aktiviteter.}
 
-\subsection{Kassererens beretning, jf. stk. \ref{gfi}, nr. 3, skal som minimum indeholde fremlæggelse af det reviderede regnskab til godkende samt revisorernes fremlæggelse af bemærkninger til regnskabet.}
+\subsection{Kassererens beretning, jf. stk. \ref{gfi:dagsorden}, nr. 3, skal som minimum indeholde fremlæggelse af det reviderede regnskab til godkende samt revisorernes fremlæggelse af bemærkninger til regnskabet.}
 
-\subsection{Studenterrådets beretning, jf. stk. \ref{gfi}, nr. 4, skal som minimum indeholde en oversigt over de vigtigste arrangementer i Studenterrådet med relevans for Faggruppen.}
+\subsection{Studenterrådets beretning, jf. stk. \ref{gfi:dagsorden}, nr. 4, skal som minimum indeholde en oversigt over de vigtigste arrangementer i Studenterrådet med relevans for Faggruppen.}
 
-\subsection{Indkomne forslag, jf. stk. \ref{gfi}, nr. 6, kan indsendes af enhver studerende under Faggruppen og skal være forpersonen i hænde senest 14 dage før generalforsamlingens afholdelse.}
+\subsection{Indkomne forslag, jf. stk. \ref{gfi:dagsorden}, nr. 6, kan indsendes af enhver studerende under Faggruppen og skal være forpersonen i hænde senest 14 dage før generalforsamlingens afholdelse.}
 
 \section{Studentermøder}
 
@@ -123,7 +125,7 @@
 
 \subsection{På studentermøder har alle studerende ved Faggruppen tale- og stemmret. De indvalgte kan herudover beslutte at give andre deltagere taleret.}
 
-\subsection{Studentermødet afholdes én gang årligt i forårssemestret og indkaldes af forpersonen med senest 28 dages varsel på Fagrådet Sigmas opslagstavle foran Matematisk Kantine og på \fagr{}s Facebook-side. Studentermødet er beslutningsdygtigt, når det er rettidigt indkaldt.}
+\subsection{Studentermødet afholdes efter behov og indkaldes af bestyrelsen med mindst 21 dages varsel på Fagrådet Sigmas opslagstavle foran Matematisk Kantine og på Fagrådet Sigmas Facebook-side. Studentermødet er beslutningsdygtigt, når det er rettidigt indkaldt.}
 
 \subsection{Dagsordener på studentermødet skal som minimum indeholde:}
 
@@ -141,13 +143,27 @@
 
 \subsection{Beslutninger træffes ved simpelt flertal. Der kan ikke træffes beslutninger under punktet Eventuelt eller punkter, som ikke fremgik på dagsordenen ved indkaldelsen.}\label{dagligledelse:flertal}
 
-\section{Foreningens daglige ledelse}\label{dagligledelse}
+\section{Bestyrelsen}\label{bestyrelsen}
 
-\subsection{\fagr{}s daglige ledelse udgøres af møderne i \fagr{}.}\label{dagligledelse:daglig}
+\subsection{\fagr{}s bestyrelse udgøres af forpersonen, næstforpersonen og kassereren indvalgt i henhold til §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5, litra a-c.}
 
-\subsection{På møder i \fagr{} har indvalgte tale- og stemmeret. Ligeledes har studerende under Faggruppen tale- og stemmeret. De indvalgte kan herudover beslutte at give andre deltagere taleret. Beslutninger træffes ved simpelt flertal.}\label{dagligledelse:stemmeret}
+%\subsection{Såfremt ingen næstforperson indvælges jf. §\ref{gfi}, stk. \ref{gfi:dagsorden}, nr. 5, litra b, udgøres bestyrelsen af forpersonen og kassereren.}
 
-\subsection{Forpersonen eller næstforpersonen indkalder til møde med dagsorden senest 2 dage før mødets afholdelse, hvorved mødet er beslutningsdygtigt. Der kan dispenseres fra dette ved afstemning.}\label{dagligledelse:indkaldelse}
+\subsection{Såfremt et medlem af bestyrelsen udtræder inden den kommende ordinære generalforsamling jf. §\ref{gfi}, stk. \ref{gfi:dagsorden}, har den resterende bestyrelse pligt til at indkalde til en ekstraordinær generalforsamling. jf. §\ref{gfi}, stk. \ref{gfi:dagsorden} inden for 14 dage. §\ref{gfi}, stk. \ref{gfi:dagsorden}, pkt. 5, litra a-c skal da som minimum også være indeholdt.}
+
+\subsection{Bestyrelsen har ansvaret for driften af foreningen og skal handle inden for rammerne af beslutningerne truffet på fagrådsmøder jf. § \ref{dagligledelse}. Bestyrelsen varetager desuden forvaltningen af lokalet Rådet på vegne af \fagr{}, herunder kommunikation med eksterne foreninger omkring brug og rengøring af lokalet samt udlån af og regnskab over lokalenøgler.}
+
+\section{Fagrådsmøder}\label{dagligledelse}
+
+%\section{Foreningens daglige ledelse}\label{dagligledelse}
+
+\subsection{Møder i \fagr{}, herefter omtalt fagrådsmøder, lægger rammerne for \fagr{}s virke.}\label{dagligledelse:daglig}
+
+%\subsection{\fagr{}s daglige ledelse udgøres af møderne i \fagr{}.}\label{dagligledelse:daglig}
+
+\subsection{På fagrådsmøder har indvalgte tale- og stemmeret. Ligeledes har studerende under Faggruppen tale- og stemmeret. De indvalgte kan herudover beslutte at give andre deltagere taleret. Beslutninger træffes ved simpelt flertal.}\label{dagligledelse:stemmeret}
+
+\subsection{Bestyrelsen indkalder til møde med dagsorden senest 2 dage før mødets afholdelse, hvorved mødet er beslutningsdygtigt. Der kan dispenseres fra dette ved afstemning.}\label{dagligledelse:indkaldelse}
 
 \subsection{Dagsordenen skal som minimum indeholde:}\label{dagligeledelse:dagsorden}
 
@@ -169,15 +185,17 @@
 
 \subsection{Beslutninger træffes ved simpelt flertal. Der kan ikke træffes beslutninger under punktet Eventuelt eller punkter, som ikke fremgik på dagsordenen ved inkaldelsen,}\label{dagligledelse:beslutninger}
 
-\subsection{Referatet offentliggøres senest 7 dage efter mødet. Referanten kan træffe beslutning om begrænset offenetliggørelse af specifikke punkter.}
+\subsection{Referatet offentliggøres senest 7 dage efter mødet. Referanten kan træffe beslutning om begrænset offentliggørelse af specifikke punkter.}
 
 \section{Økonomi og revision}\label{revision}
 
 \subsection{Kassereren fører løbende regnskab og tilsyn med \fagr{}s økonomi og bistår revisorerne med fremskaffelse af kontoudtog og øvrige bilag til regnskabet.}
 
-\subsection{Udlæg, der overstiger 2.000 kr., skal godkendes på et møde i \fagr{}, jf. § \ref{dagligledelse}.}
+\subsection{Udlæg, der overstiger 2.000 kr., skal godkendes på et møde i \fagr{}, jf. §\ref{dagligledelse}.}
 
-\subsection{Revisorerne skal inden den ordinære generalforsamling gennemgå regnskabet og kontrollere, at det stemmer overens med beholdningerne. Den kritiske revisor påtegner regnskabet.}\label{revision:kritiske}
+\subsection{Den indvalgte interne og eksterne revisor, jf. §\ref{gfi}, stk. \ref{gfi:dagsorden}, punkt 5, litra d og f, betegnes samlet som den kritiske revision.}
+
+\subsection{Den kritiske revision skal inden den ordinære generalforsamling gennemgå regnskabet og kontrollere, at det stemmer overens med beholdningerne. Den kritiske revision påtegner regnskabet. Kassereren har pligt til at indsende regnskabet til den kritiske revision senest 7 dage før generalforsamlingen.}\label{revision:kritiske}
 
 \section{Underforeninger}\label{underforeninger}
 
@@ -209,6 +227,6 @@
 \noindent
 \textit{Ændring af statutten er foretaget på generalforsamlingen d. 23 maj 2023}
 
-\include{forslag}
+%\include{forslag}
 %\end{multicols}
 \end{document}
